# StreamingMedia

./: Compile_CoreLibrary.md  README.md
Android/: settings.gradle
Android/app/: build.gradle
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: CMakeLists.txt  core_jni.cpp
Android/app/src/main/java/com/example/androidplatform/: AutoFitSurfaceView.java  Camera2Helper.java  Camera2PreviewActivity.java  CoreJNI.java  MainActivity.java  erro.txt
Android/app/src/main/java/com/example/androidplatform/camera/: AutoFitSurfaceView.java  CameraController.java
Android/app/src/main/java/com/example/androidplatform/gl/: CameraGLRenderer.java  MyGLSurfaceView.java
Android/app/src/main/java/com/example/androidplatform/ui/: CameraActivity.java
Android/app/src/main/java/com/example/androidplatform/utils/: YUVUtils.java
Android/app/src/main/res/layout/: activity_camera.xml  activity_main.xml
Android/app/src/main/res/raw/: fragment_shader.glsl  vertex_shader.glsl
Android/app/src/main/res/values/: strings.xml
Android/gradle/wrapper/: gradle-wrapper.properties
Core/: CoreLibrary.cpp  CoreLibrary.h  main.cpp
